--- a/Wardrobe.Services/Wardrobe.Services.csproj
+++ b/Wardrobe.Services/Wardrobe.Services.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IService\IGarmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\GarmentService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wardrobe.Data\Wardrobe.Data.csproj">
@@ -48,9 +50,6 @@
       <Name>Wardrobe.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="IService\" />
-    <Folder Include="Service\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
