--- a/Wardrobe/Web.config
+++ b/Wardrobe/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Wardrobe-20190324043913.mdf;Initial Catalog=aspnet-Wardrobe-20190324043913;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="b8041046Entities" connectionString="metadata=res://*/WardrobeDataModel.csdl|res://*/WardrobeDataModel.ssdl|res://*/WardrobeDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=teach-l-sql1\awa2;initial catalog=b8041046;persist security info=True;user id=b8041046;password=2010entwistles5@ME;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
