--- a/Wardrobe/Wardrobe.csproj
+++ b/Wardrobe/Wardrobe.csproj
@@ -270,6 +270,10 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Garment\GetGarments.cshtml" />
+    <Content Include="Views\Garment\Create.cshtml" />
+    <Content Include="Views\Garment\Edit.cshtml" />
+    <Content Include="Views\Garment\Details.cshtml" />
+    <Content Include="Views\Garment\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
