redoing getallgarments carousel

--- a/Wardrobe/Wardrobe.csproj
+++ b/Wardrobe/Wardrobe.csproj
@@ -200,7 +200,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\GarmentController.cs" />
+    <Compile Include="Controllers\GetAllGarmentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -269,15 +269,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Garment\Create.cshtml" />
-    <Content Include="Views\Garment\Edit.cshtml" />
-    <Content Include="Views\Garment\Details.cshtml" />
-    <Content Include="Views\Garment\Delete.cshtml" />
-    <Content Include="Views\Garment\index.cshtml" />
-    <Content Include="Views\Garment\GetGarment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\GetAllGarments\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
